--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,8 @@
     display: flex;
     /* align-content: center; */
     justify-content: center;
+    margin: 0px;
+    padding: 0px;
   }
   #body{
 
