--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,19 @@
 .clock {
-    max-width: 100%;
-    display: flex;
-    /* align-content: center; */
-    justify-content: center;
-    margin: 0px;
-    padding: 0px;
+  max-width: 100%;
+  display: flex;
+  /* align-content: center; */
+  justify-content: center;
+  margin: 0px;
+  padding: 0px;
   }
-  #body{
-    background-size: cover; no-repeat; center
+#body{
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-position: center;
   }
-
-  #weather{
-
-  }
+#quote{
+color: green;
+}
+#weather{
+  color: red;
+}
